tests/normal_bad.svx
; pos=fail warn=2 error=3
*fix 1 0 0 0
1 2 2.13 012 0
; error: Tape reading may not be omitted
1 1a - 000 0
; error: Compass reading may not be omitted except on plumbed legs
2 3 1.00 - 0
; error: Character "*" not allowed in station name (use *SET NAMES to set allowed characters)
2 * 1.00 000 0
2 4 1.00 - DOWN
; warning: Compass reading given on plumbed leg
2 A 1.00 034 UP
; warning: Compass reading given on plumbed leg
1 B 1.00 000 UP
